# orbi-france-3d

./: .gitignore  CMakeLists.txt  LICENSE  README.md  resources.qrc
res/qml/: main.qml
src/: main.cpp
src/data/: SGP4Propagator.cpp  SGP4Propagator.h  TLEParser.cpp  TLEParser.h  test_tle.txt
src/orbit/: OrbitCalculator.cpp  OrbitCalculator.h  OrbitPath.cpp  OrbitPath.h
